# assistive-rehab

doc/doxygen/doc/html/: Exercise_8cpp.html  Exercise_8cpp_source.html  Exercise_8h.html  Exercise_8h_source.html  FollowedSkeletonInfo_8h_source.html  Main_8cpp_source.html  Manager_8cpp.html  Manager_8cpp_source.html  Manager_8h.html  Manager_8h_source.html  Metric_8cpp.html  Metric_8cpp_source.html  Metric_8h.html  Metric_8h_source.html  Processor_8cpp.html  Processor_8cpp_source.html  Processor_8h.html  Processor_8h_source.html  actionRecognizer_2src_2main_8cpp_source.html  actionRecognizer__IDL_8h_source.html  annotated.html  attentionManager_2src_2main_8cpp_source.html  attentionManager__IDL_8h_source.html  classactionRecognizer__IDL.html  classassistive__rehab_1_1Dtw.html  classassistive__rehab_1_1KeyPoint.html  classassistive__rehab_1_1Skeleton.html  classassistive__rehab_1_1SkeletonStd.html  classattentionManager__IDL.html  (+129 more)
doc/doxygen/generated-from-xml/: actionRecognizer.dox  attentionManager.dox  faceRecognizer.dox  feedbackProducer.dox  feedbackSynthetizer.dox  humanStructure.dox  interactionManager.dox  lineDetector.dox  managerTUG.dox  motionAnalyzer.dox  navController.dox  robotSkeletonPublisher.dox  skeletonPlayer.dox  skeletonRetriever.dox  skeletonScaler.dox  skeletonViewer.dox
doc/doxygen/idl_dox/: managerTUG_IDL.h  motionAnalyzer_IDL.h
doc/mkdocs/site/: 404.html  index.html  sitemap.xml
modules/: CMakeLists.txt
modules/skeletonLocker/: CMakeLists.txt
modules/skeletonLocker/app/conf/: config.ini
modules/skeletonLocker/src/: main.cpp
(+91 files in other folders)
